k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 8000
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 8000
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 8000
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
